@@ -34,6 +34,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|ArrayList
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Collection
 import|;
 end_import
@@ -45,6 +55,16 @@ operator|.
 name|util
 operator|.
 name|Collections
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
 import|;
 end_import
 
@@ -722,8 +742,8 @@ operator|.
 name|explain
 argument_list|(
 name|context
-operator|.
-name|docBase
+argument_list|,
+name|childWeight
 argument_list|)
 return|;
 block|}
@@ -1610,8 +1630,11 @@ specifier|public
 name|Explanation
 name|explain
 parameter_list|(
-name|int
-name|docBase
+name|LeafReaderContext
+name|context
+parameter_list|,
+name|Weight
+name|childWeight
 parameter_list|)
 throws|throws
 name|IOException
@@ -1619,6 +1642,8 @@ block|{
 name|int
 name|start
 init|=
+name|context
+operator|.
 name|docBase
 operator|+
 name|prevParentDoc
@@ -1629,6 +1654,8 @@ comment|// +1 b/c prevParentDoc is previous parent doc
 name|int
 name|end
 init|=
+name|context
+operator|.
 name|docBase
 operator|+
 name|parentDoc
@@ -1636,6 +1663,82 @@ operator|-
 literal|1
 decl_stmt|;
 comment|// -1 b/c parentDoc is parent doc
+name|Explanation
+name|bestChild
+init|=
+literal|null
+decl_stmt|;
+name|int
+name|matches
+init|=
+literal|0
+decl_stmt|;
+for|for
+control|(
+name|int
+name|childDoc
+init|=
+name|start
+init|;
+name|childDoc
+operator|<=
+name|end
+condition|;
+name|childDoc
+operator|++
+control|)
+block|{
+name|Explanation
+name|child
+init|=
+name|childWeight
+operator|.
+name|explain
+argument_list|(
+name|context
+argument_list|,
+name|childDoc
+operator|-
+name|context
+operator|.
+name|docBase
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|child
+operator|.
+name|isMatch
+argument_list|()
+condition|)
+block|{
+name|matches
+operator|++
+expr_stmt|;
+if|if
+condition|(
+name|bestChild
+operator|==
+literal|null
+operator|||
+name|child
+operator|.
+name|getValue
+argument_list|()
+operator|>
+name|bestChild
+operator|.
+name|getValue
+argument_list|()
+condition|)
+block|{
+name|bestChild
+operator|=
+name|child
+expr_stmt|;
+block|}
+block|}
+block|}
 return|return
 name|Explanation
 operator|.
@@ -1652,12 +1755,16 @@ name|Locale
 operator|.
 name|ROOT
 argument_list|,
-literal|"Score based on child doc range from %d to %d"
+literal|"Score based on %d child docs in range from %d to %d, best match:"
+argument_list|,
+name|matches
 argument_list|,
 name|start
 argument_list|,
 name|end
 argument_list|)
+argument_list|,
+name|bestChild
 argument_list|)
 return|;
 block|}
