@@ -1771,6 +1771,52 @@ block|{
 return|return;
 comment|// something more complicated.
 block|}
+name|String
+name|descr
+init|=
+name|expl
+operator|.
+name|getDescription
+argument_list|()
+operator|.
+name|toLowerCase
+argument_list|(
+name|Locale
+operator|.
+name|ROOT
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|descr
+operator|.
+name|startsWith
+argument_list|(
+literal|"score based on "
+argument_list|)
+operator|&&
+name|descr
+operator|.
+name|contains
+argument_list|(
+literal|"child docs in range"
+argument_list|)
+condition|)
+block|{
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+literal|"Child doc explanations are missing"
+argument_list|,
+name|detail
+operator|.
+name|length
+operator|>
+literal|0
+argument_list|)
+expr_stmt|;
+block|}
 if|if
 condition|(
 name|detail
@@ -1830,21 +1876,6 @@ name|float
 name|x
 init|=
 literal|0
-decl_stmt|;
-name|String
-name|descr
-init|=
-name|expl
-operator|.
-name|getDescription
-argument_list|()
-operator|.
-name|toLowerCase
-argument_list|(
-name|Locale
-operator|.
-name|ROOT
-argument_list|)
 decl_stmt|;
 name|boolean
 name|productOf
